Fix: after folding actionsTakenThisRound was not reset.